--- a/Nemandi.Plugins/Nemandi.Plugins.MojiJisho/Nemandi.Plugins.MojiJisho.csproj
+++ b/Nemandi.Plugins/Nemandi.Plugins.MojiJisho/Nemandi.Plugins.MojiJisho.csproj
@@ -8,13 +8,10 @@
           <Private>false</Private>
           <ExcludeAssets>runtime</ExcludeAssets>
       </ProjectReference>
-      <ProjectReference Include="..\..\Nemandi.Base\Nemandi.Base.csproj">
-          <Private>false</Private>
-          <ExcludeAssets>runtime</ExcludeAssets>
-      </ProjectReference>
       <ProjectReference Include="..\..\Nemandi.CommonUtility\Nemandi.CommonUtility.csproj">
           <Private>false</Private>
           <ExcludeAssets>runtime</ExcludeAssets>
       </ProjectReference>
+      <ProjectReference Include="..\..\Nemandi.Infrastructure\Nemandi.Infrastructure.csproj" />
   </ItemGroup>
 </Project>
