--- a/Nemandi.PluginBase/Nemandi.PluginBase.csproj
+++ b/Nemandi.PluginBase/Nemandi.PluginBase.csproj
@@ -1,11 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
-    <ProjectReference Include="..\Nemandi.Base\Nemandi.Base.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
     <Folder Include="Configurations\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Nemandi.Infrastructure\Nemandi.Infrastructure.csproj" />
   </ItemGroup>
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
