:construction: add support of saving and loading config of plugin

--- a/Nemandi.Core/Nemandi.Core.csproj
+++ b/Nemandi.Core/Nemandi.Core.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <Folder Include="PluginSupport\" />
+    <Folder Include="UserSettings\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Nemandi.Infrastructure\Nemandi.Infrastructure.csproj" />
