--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,8 @@
 language: csharp
 solution: src/Nemandi.sln
 os: windows
-
 mono: none
-dotnet: 3.1.201
 script:
+ - choco install dotnetcore-sdk
  - dotnet restore
  - dotnet build
