:zap: improved MojiJisho plugin

--- a/src/Nemandi.Plugins/Nemandi.Plugins.MojiJisho/Nemandi.Plugins.MojiJisho.csproj
+++ b/src/Nemandi.Plugins/Nemandi.Plugins.MojiJisho/Nemandi.Plugins.MojiJisho.csproj
@@ -12,6 +12,9 @@
           <Private>false</Private>
           <ExcludeAssets>runtime</ExcludeAssets>
       </ProjectReference>
-      <ProjectReference Include="..\..\Nemandi.Infrastructure\Nemandi.Infrastructure.csproj" />
+      <ProjectReference Include="..\..\Nemandi.Infrastructure\Nemandi.Infrastructure.csproj">
+          <Private>false</Private>
+          <ExcludeAssets>runtime</ExcludeAssets>
+      </ProjectReference>
   </ItemGroup>
 </Project>
