--- a/src/Nemandi.Test/Nemandi.Test.csproj
+++ b/src/Nemandi.Test/Nemandi.Test.csproj
@@ -7,5 +7,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Nemandi.Core\Nemandi.Core.csproj" />
+    <ProjectReference Include="..\Nemandi.CommonUtility\Nemandi.CommonUtility.csproj" />
+    <ProjectReference Include="..\Nemandi.Infrastructure\Nemandi.Infrastructure.csproj" />
   </ItemGroup>
 </Project>
