--- a/src/Nemandi.Infrastructure/Nemandi.Infrastructure.csproj
+++ b/src/Nemandi.Infrastructure/Nemandi.Infrastructure.csproj
@@ -6,5 +6,7 @@
 
   <ItemGroup>
     <Folder Include="Words\" />
+    <Folder Include="Exceptions\" />
+    <Folder Include="Exceptions\Plugin\" />
   </ItemGroup>
 </Project>
