:hammer: refactor: moved http.cs to CommonUtilities namespace

--- a/src/Nemandi.Infrastructure/Nemandi.Infrastructure.csproj
+++ b/src/Nemandi.Infrastructure/Nemandi.Infrastructure.csproj
@@ -8,5 +8,6 @@
     <Folder Include="Words\" />
     <Folder Include="Exceptions\" />
     <Folder Include="Exceptions\Plugin\" />
+    <Folder Include="CommonUtilities\" />
   </ItemGroup>
 </Project>
