--- a/src/Nemandi.Test/Nemandi.Test.csproj
+++ b/src/Nemandi.Test/Nemandi.Test.csproj
@@ -1,12 +1,25 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Nemandi.Core\Nemandi.Core.csproj" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
+    <PackageReference Include="xunit" Version="2.4.0" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
+    <PackageReference Include="coverlet.collector" Version="1.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Plugins\" />
+    <Folder Include="Functionality\" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\Nemandi.Infrastructure\Nemandi.Infrastructure.csproj" />
+    <ProjectReference Include="..\Nemandi.Core\Nemandi.Core.csproj" />
+    <ProjectReference Include="..\Nemandi.PluginBase\Nemandi.PluginBase.csproj" />
   </ItemGroup>
 </Project>
