--- a/src/Nemandi.Plugins/Nemandi.Plugins.OxfordLearnersDict/Nemandi.Plugins.OxfordLearnersDict.csproj
+++ b/src/Nemandi.Plugins/Nemandi.Plugins.OxfordLearnersDict/Nemandi.Plugins.OxfordLearnersDict.csproj
@@ -4,7 +4,20 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <PackageOutputDir>Dependcies\</PackageOutputDir>
   </PropertyGroup>
-
+  
+  <PropertyGroup>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
+  </PropertyGroup>
+    
+   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <OutputPath>..\..\Nemandi.Test\bin\Debug\netcoreapp3.1\plugins</OutputPath>
+    <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <OutputPath>..\..\Nemandi.Test\bin\Debug\netcoreapp3.1\plugins</OutputPath>
+    <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+  </PropertyGroup>  
+  
   <ItemGroup>
     <PackageReference Include="HtmlAgilityPack" Version="1.11.23" />
   </ItemGroup>
@@ -13,6 +26,10 @@
     <ProjectReference Include="..\..\Nemandi.PluginBase\Nemandi.PluginBase.csproj">
         <Private>false</Private>
         <ExcludeAssets>runtime</ExcludeAssets>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Nemandi.Infrastructure\Nemandi.Infrastructure.csproj">
+      <Private>false</Private>
+      <ExcludeAssets>runtime</ExcludeAssets>
     </ProjectReference>
   </ItemGroup>
 
