--- a/src/Nemandi.Core/Nemandi.Core.csproj
+++ b/src/Nemandi.Core/Nemandi.Core.csproj
@@ -9,9 +9,21 @@
     <Folder Include="UserSettings\" />
     <Folder Include="I18N\" />
     <Folder Include="HotKey\" />
+    <Folder Include="I18N\LanguageResources\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Nemandi.Infrastructure\Nemandi.Infrastructure.csproj" />
     <ProjectReference Include="..\Nemandi.PluginBase\Nemandi.PluginBase.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Update="I18N\LanguageResources\zh-cn.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Strings.zh-CN.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Update="I18N\LanguageResources\zh-cn.Designer.cs">
+      <DependentUpon>Strings.zh-CN.resx</DependentUpon>
+    </Compile>
   </ItemGroup>
 </Project>
