--- a/src/Nemandi.Plugins/Nemandi.Plugins.OxfordLearnersDict/Nemandi.Plugins.OxfordLearnersDict.csproj
+++ b/src/Nemandi.Plugins/Nemandi.Plugins.OxfordLearnersDict/Nemandi.Plugins.OxfordLearnersDict.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -32,5 +32,9 @@
       <ExcludeAssets>runtime</ExcludeAssets>
     </ProjectReference>
   </ItemGroup>
+
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="xcopy $(TargetPath) $(SolutionDir)Nemandi\bin\Debug\netcoreapp3.1\plugins\ /Y" />
+  </Target>
 
 </Project>
