--- a/src/Nemandi.Plugins/Nemandi.Plugins.MojiJisho/Nemandi.Plugins.MojiJisho.csproj
+++ b/src/Nemandi.Plugins/Nemandi.Plugins.MojiJisho/Nemandi.Plugins.MojiJisho.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -22,4 +22,8 @@
       <ExcludeAssets>runtime</ExcludeAssets>
     </ProjectReference>
   </ItemGroup>
+
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="xcopy $(TargetPath) $(SolutionDir)Nemandi\bin\Debug\netcoreapp3.1\plugins\ /Y" />
+  </Target>
 </Project>
