:lipstick: updated UI

--- a/src/Nemandi.Plugins/Nemandi.Plugins.CambridgeDict/Nemandi.Plugins.CambridgeDict.csproj
+++ b/src/Nemandi.Plugins/Nemandi.Plugins.CambridgeDict/Nemandi.Plugins.CambridgeDict.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <Configurations>Debug;Release;Release_x64</Configurations>
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -9,6 +10,10 @@
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <OutputPath>..\..\Nemandi.Test\bin\Debug\netcoreapp3.1\plugins</OutputPath>
+    <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release_x64|AnyCPU'">
     <OutputPath>..\..\Nemandi.Test\bin\Debug\netcoreapp3.1\plugins</OutputPath>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
   </PropertyGroup>
@@ -25,6 +30,6 @@
   </ItemGroup>
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <Exec Command="xcopy $(TargetPath) $(SolutionDir)Nemandi\bin\Debug\netcoreapp3.1\plugins\ /Y" />
+    <Exec Command="xcopy $(TargetPath) $(SolutionDir)Nemandi\bin\$(ConfigurationName)\netcoreapp3.1\plugins\ /Y" />
   </Target>
 </Project>
