--- a/src/Nemandi.PluginBase/Nemandi.PluginBase.csproj
+++ b/src/Nemandi.PluginBase/Nemandi.PluginBase.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <Configurations>Debug;Release;Release_x64</Configurations>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\Nemandi.Infrastructure\Nemandi.Infrastructure.csproj">
