--- a/src/Nemandi.Plugins/Nemandi.Plugins.OxfordLearnersDict/Nemandi.Plugins.OxfordLearnersDict.csproj
+++ b/src/Nemandi.Plugins/Nemandi.Plugins.OxfordLearnersDict/Nemandi.Plugins.OxfordLearnersDict.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <PackageOutputDir>Dependcies\</PackageOutputDir>
+    <Configurations>Debug;Release;Release_x64</Configurations>
   </PropertyGroup>
   
   <PropertyGroup>
@@ -14,6 +15,10 @@
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <OutputPath>..\..\Nemandi.Test\bin\Debug\netcoreapp3.1\plugins</OutputPath>
+    <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release_x64|AnyCPU'">
     <OutputPath>..\..\Nemandi.Test\bin\Debug\netcoreapp3.1\plugins</OutputPath>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
   </PropertyGroup>  
@@ -34,7 +39,7 @@
   </ItemGroup>
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <Exec Command="xcopy $(TargetPath) $(SolutionDir)Nemandi\bin\Debug\netcoreapp3.1\plugins\ /Y" />
+    <Exec Command="xcopy $(TargetPath) $(SolutionDir)Nemandi\bin\$(ConfigurationName)\netcoreapp3.1\plugins\ /Y" />
   </Target>
 
 </Project>
